--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ target/
 
 ### VS Code ###
 .vscode/
-/frontend/till/dist
-/frontend/till/tmp
-/frontend/till/out-tsc
-/frontend/till/node_modules
+/front-end/catalog/dist
+/front-end/catalog/tmp
+/front-end/catalog/out-tsc
+/front-end/catalog/node_modules
