Added JWT, Redis; Fixed login

--- a/back-end/catalog/pom.xml
+++ b/back-end/catalog/pom.xml
@@ -19,6 +19,8 @@
 	</properties>
 
 	<dependencies>
+		
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -31,22 +33,46 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
  		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
 	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-data-redis</artifactId>
+	    </dependency>
+		
+		<!-- Database -->
+	    <dependency>
 	        <groupId>org.postgresql</groupId>
 	        <artifactId>postgresql</artifactId>
     	</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
+   	    <dependency>
+	        <groupId>redis.clients</groupId>
+	        <artifactId>jedis</artifactId>
+	    </dependency>
 		
+		<!-- JWT -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-impl</artifactId>
+		    <version>0.11.1</version>
+		    <scope>runtime</scope>
+		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-api</artifactId>
+		    <version>0.11.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-jackson</artifactId>
+		    <version>0.11.1</version>
+		    <scope>runtime</scope>
+		</dependency>	
+		
+		<!-- Test  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -74,12 +100,20 @@
 		    <version>2.0.7</version>
 		    <scope>test</scope>
 		</dependency>
+		
+		<!-- Test DBMS -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- Helpers -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 		    <groupId>org.modelmapper</groupId>
 		    <artifactId>modelmapper</artifactId>
@@ -99,7 +133,14 @@
 		    <version>1.24.1</version>
 		</dependency>
 	</dependencies>
-	
+
+	<repositories>
+	  	<repository>
+		    <id>spring-milestone</id>
+		    <name>Spring Maven MILESTONE Repository</name>
+		    <url>https://repo.spring.io/libs-milestone</url>
+	  	</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -107,21 +148,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- Entity propert lazy fetch -->
 			<plugin>
-		    <groupId>org.hibernate.orm.tooling</groupId>
-		    <artifactId>hibernate-enhance-maven-plugin</artifactId>
-		    <executions>
-		        <execution>
-		            <configuration>
-		                <failOnError>true</failOnError>
-		                <enableLazyInitialization>true</enableLazyInitialization>
-		            </configuration>
-		            <goals>
-		                <goal>enhance</goal>
-		            </goals>
-		        </execution>
-		    </executions>
-		</plugin>
+			    <groupId>org.hibernate.orm.tooling</groupId>
+			    <artifactId>hibernate-enhance-maven-plugin</artifactId>
+			    <executions>
+			        <execution>
+			            <configuration>
+			                <failOnError>true</failOnError>
+			                <enableLazyInitialization>true</enableLazyInitialization>
+			            </configuration>
+			            <goals>
+			                <goal>enhance</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 		</plugins>
 	</build>
 
